fixed blurry navbar links; tried and failed adding maps to contacts page

--- a/public/stylesheets/bits.css
+++ b/public/stylesheets/bits.css
@@ -47,8 +47,13 @@ body > #wrap {
   float: left; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #273886;
   font-family: Advent, Helvetica, Arial, sans-serif; }
+
+h1 {
+  color: #273886; }
+
+h2, h3, h4, h5, h6 {
+  color: #484848; }
 
 a {
   cursor: pointer; }
@@ -56,7 +61,6 @@ a {
 .browser-bar {
   position: relative;
   background: #273886;
-  border-top: 5px solid #7884b4;
   border-bottom: 5px solid #7884b4;
   color: #eaebf3;
   height: 40px;
@@ -70,7 +74,8 @@ a {
   border: none; }
 
 .navbar .nav > li > a {
-  color: #eaebf3; }
+  color: #eaebf3;
+  text-shadow: 0px 1px 0px #0a0a0a; }
 
 .navbar .nav > li > a:hover {
   color: #dce0e6; }
@@ -87,7 +92,8 @@ a {
 
 .navbar .brand {
   font-size: 2.0em;
-  color: #eaebf3; }
+  color: #eaebf3;
+  text-shadow: 0 1px 0 #0a0a0a; }
 
 .nav {
   style: none;
@@ -146,3 +152,6 @@ a {
 
 .footer-font {
   color: #eaebf3; }
+
+.footer-title {
+  float: left; }
